--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 [dependencies]
 blake2 = "0.10.6"
 clap = { version = "4.5.1", features = ["derive"] }
+crossterm = "0.27.0"
 file-hashing = "0.1.2"
 libloading = "0.8.2"
+path-absolutize = "3.1.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 thiserror = "1.0.57"
 tokio = { version = "1.36.0", features = ["full"] }
 toml = "0.8.10"
 walkdir = "2.5.0"
-yac_build = { version = "*", path = "../yac_build" }
