--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ path-absolutize = "3.1.1"
 relative-path = "1.9.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+serde_yaml = "0.9.32"
 thiserror = "1.0.57"
 tokio = { version = "1.36.0", features = ["full"] }
 toml = "0.8.10"
