--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crossterm = "0.27.0"
 file-hashing = "0.1.2"
 libloading = "0.8.2"
 path-absolutize = "3.1.1"
+rayon = "1.9.0"
 relative-path = "1.9.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
